<resources>
    <string name="default_notification_channel_id" translatable="false">Praaktis</string>
    <string name="royal_n_belgian_n_hockey_n_association">Royal\nBelgian\nHockey\nAssociation</string>
    <string name="login">LOGIN</string>
    <string name="log_in">LOG IN</string>
    <string name="dashboard">Dashboard</string>
    <string name="new_challenge">New Challenge</string>
    <string name="timeline">Timeline</string>
    <string name="more">More</string>
    <string name="my_profile">My profile</string>
    <string name="menu">Menu</string>
    <string name="friends">Friends</string>
    <string name="log_out">Log out</string>
    <string name="me">me</string>
    <string name="level">Level</string>
    <string name="points">points</string>
    <string name="credits">credits</string>
    <string name="progress_to_next_level">progress to next level</string>
    <string name="analysis">Analysis</string>
    <string name="drag_flick">Drag / Flick</string>
    <string name="stretching_arms_up">Stretching Arms Up</string>
    <string name="low_backhand">Low Backhand</string>
    <string name="trap">Trap</string>
    <string name="my_best_score">my best score</string>
    <string name="my_average_score">my average score</string>
    <string name="what_do_you_feel_like_trying">what do you feel like trying?</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="done">Done</string>
    <string name="error">Please check your connection and try again</string>
    <string name="message_select_or_take">Select or take a new Picture</string>
    <string name="let_s_set_you_up_nicely">Let\'s set you up nicely</string>
    <string name="place_your_camera_on_your_chest_level">Place your camera on your chest level</string>
    <string name="make_sure_you_are_10_feet_away_from_your_camera">Make sure you are 10 feet away from your camera</string>
    <string name="make_sure_the_ball_and_the_goal_are_in_camera_view">Make sure the ball and the goal are in camera view</string>
    <string name="let_me_go">Let me go</string>
    <string name="settings">Settings</string>
    <string name="score">Score</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profile">Profile</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First name</string>
    <string name="country">Country</string>
    <string name="thank_you_s">Thank you, %s</string>
    <string name="account_activation_summary">You are now a member of our cool community. We will message you on <b>%s</b> in order to activate your account.</string>
    <string name="are_you_sure_logout">Are you sure that you want to sign out?</string>
    <string name="invite_a_friends">Invite a friend</string>
    <string name="enter_email_address">ENTER EMAIL ADDRESS</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="ok">OK</string>
    <string name="read_and_accept_our_terms">Read and accept\nour <u>terms</u></string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="processing_your_video">Processing your video</string>
    <string name="calculating">Calculating</string>
    <string name="get_into_position">Get into position</string>
    <string name="calibrate">Calibrate</string>
    <string name="already_activated_nstart">Already activated?\nStart</string>
    <string name="start">Start</string>
    <string name="already_activated">Already activated?</string>
    <string name="resend_link">Resend link</string>
    <string name="detailed_analysis">Detailed analysis</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to login</string>
    <string name="details">Details</string>
    <string name="create_account">Create account</string>
    <string name="last_name">Last name</string>
    <string name="nickname">Nickname</string>
    <string name="your_email_phone">Your email</string>
    <string name="save">Save</string>
    <string name="registration">Registration</string>
    <string name="set_password">Set password</string>
    <string name="re_password">Repeat password</string>
    <string name="send_confirmation_link">Send confirmation link</string>
    <string name="your_result">Your Result</string>
    <string name="try_again">try again</string>
    <string name="language">Language</string>
    <string name="push_notification">Push notification</string>
    <string name="recalibrate">Recalibrate</string>
    <string name="name">Name</string>
    <string name="pos">Pos</string>
    <string name="how_would_you_like_to_be_known">How would you like to be known?</string>
    <string name="next_step">Next step</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="how_boon_are_you">How boon are you?</string>
    <string name="repeat_after_ntom_boon">Repeat after\nTom Boon</string>
    <string name="challange_nfriends">Challenge\nfriends</string>
    <string name="earn_ncredits">Earn\nCredits</string>
    <string name="skip">Skip</string>
    <string name="highest">Highest</string>
    <string name="average">Average</string>
    <string name="rank">Rank</string>
    <string name="lowest">Lowest</string>
    <string name="scores">Scores</string>
    <string name="ability_gender_age_group">[Ability] [Gender] [Age group]</string>
    <string name="attempt">Attempt</string>
    <string name="all">All</string>
    <string name="new_password">New password</string>
    <string name="processing">Processing</string>
    <string name="please_rotate_your_device">Please rotate your device</string>
    <string name="please_get_someone_to_use_your_phone_to_take_a_photo_of_you_standing_with_your_feet_apart_and_arms_outstretched_like">Please get someone to use your phone to take a photo of you standing with your feet apart and arms outstretched, like</string>
    <string name="make_sure_that_both_your_feet_and_hands_are_in_the_picture">Make sure that both your feet and hands are in the picture</string>
    <string name="to_get_the_best_results_we_need_to_factor_in_your_height_and_the_span_of_your_arms">To get the best results we need to factor in your height and \nthe span of your arms.</string>
    <string name="attempts">Attempts</string>
    <string name="invite">Invite</string>
    <string name="re_send">Re-send</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="are_you_sure_want_delete">Are you sure you want to delete %s</string>
    <string name="are_you_sure_want_accept">Are you sure you want to accept %s</string>
    <string name="are_you_sure_want_refuse">Are you sure you want to refuse %s</string>
    <string name="are_you_sure_want_invite">Are you sure you want to invite %s</string>
    <string name="are_you_sure_want_resend">Are you sure you want to resend %s</string>
    <string name="no_friend_requests">No friend requests</string>
    <string name="requests">REQUESTS</string>
    <string name="read_terms_conditions">Please Read and accept Terms and Conditions</string>
    <string name="please_activate_link">Please activate your account with the link we sent</string>
    <string name="invalid_email">Invalid email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="password_donot_match">Passwords do not match</string>
    <string name="no_chart_data_available">No chart data available</string>
    <string name="gender">Gender</string>
    <string name="me_vs_friends">Me vs friends</string>
    <string name="me_vs_others">Me vs others</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="my_friends">My friends</string>
    <string name="locale_en" translatable="false">English</string>
    <string name="locale_fr" translatable="false">French</string>
    <string name="close">close</string>
    <string name="show_guide">Show guide</string>
    <string name="don_t_have_an_account_nsign_up"><u>Don\'t have an account?\nSign up</u></string>
    <string name="intro_text_1">Video Your\nRoutine</string>
    <string name="intro_text_2">Get Your\nScore</string>
    <string name="intro_text_3">Analyse\nPerformance</string>
    <string name="intro_text_4">Review\nand Assess</string>
    <string name="intro_text_5">Compare\nand Contrast</string>
    <string name="player">Player</string>
    <string name="player_tag">Player #</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attempts_available">Attempts available</string>
    <string name="select_player">Select Player#</string>
    <string name="activate_new_player">Activate new player</string>
    <string name="activate_new_player_message">To activate players you need to have either a team subscription or an expert subscription. If you already have a team or expert subscription</string>
    <string name="subscribe_message">IF YOU DO NOT HAVE A SUBSCRIPTION CLICK HERE TO <font color="#0A4C85"><u>SUBSCRIBE</u></font></string>
    <string name="create_player">Create player</string>
    <string name="new_routine">New Routine</string>
    <string name="player_vs_club">Player vs Club</string>
    <string name="players">Players</string>
    <string name="best">Best</string>
    <string name="universe">Universe</string>
    <string name="exercise_analysis">Exercise analysis</string>
    <string name="players_available">Players available</string>
    <string name="player_analysis">Player analysis</string>
    <string name="age_range">Age range</string>
    <string name="powered_by">powered by</string>
    <string name="exercise_name">Wall Slides</string>
    <string name="exercise">Exercise</string>
    <string name="engine">Engine</string>
    <string name="description">Description</string>
    <string name="description_text">The Routine is designed to show the correct technique for the Wall Slide using the PTP Pilates ball. Various measures are calculated at the start of the Routine and at the point of maximum extension.\n At the start of the action\n- angle at knee and angle at elbow nearer camera\n- angle from vertical – head compared to feet\n At high point of the ball\n- angle at knee both nearer to and further from camera\n- angle of thigh further from camera - angle from horizontal\n- angle of thigh nearer to the camera – angle from vertical\n- hand holding ball to head - angle from vertical\n- angle of elbow further from the camera\n- whether heel is off the ground\n- time that the position with the ball at maximum height is held\n\n\n</string>
    <string name="instruction_text">1. Place your smartphone on a tripod approximately \n\t\t one metre above the ground\n2. Press Next\n3. Walk approximately four metres away from the \n\t\t camera\n4. Turn your side to the camera\n5. When the text at the bottom of the screen changes\n\t\t from Calibration to Exercise begin Routine\n4. Complete a series of wall slides \n</string>
    <string name="rate_dialog_title">How well do you think you performed the Routine?</string>
    <string name="feedback_hint">Explain the reasons for your score</string>
</resources>