<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/bg_rect_rounded_corner"
    android:padding="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    >

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos"
        android:textAllCaps="true"
        android:textColor="@color/black_text"
        android:textSize="20sp"
        android:minWidth="50dp"
        />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAllCaps="true"
        android:textColor="@color/black_text"
        android:textSize="20sp"
        android:minWidth="100dp"
        />

    <View
        android:id="@+id/vCircle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_circle"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/blue"
        android:visibility="invisible"
        />

    <TextView
        android:layout_marginLeft="5dp"
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/black_text"
        android:textSize="20sp"
        android:layout_weight="1"
        android:singleLine="true"
        android:maxLines="1"
        />

</LinearLayout>