<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.main.InstructionFragment">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="30dp"
            app:paddingBottomSystemWindowInsets="@{true}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/instructions"
                    android:textColor="@color/titleColor"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/instruction_text"
                    android:textColor="@color/regularTextColor" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            app:layout_marginBottomSystemWindowInsets="@{true}">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondaryButtonColor"
                android:letterSpacing="0"
                android:padding="16dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/secondaryButtonTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0"
                android:padding="16dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </FrameLayout>
</layout>