<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/settings"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:background="@drawable/blue_gradient"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:contentPadding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:textAllCaps="true"
                    android:textColor="@color/black_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="English"
                    android:textColor="@color/black_text"
                    android:textSize="17sp" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_notification"
                android:textSize="17sp"
                android:textColor="@color/black_text"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="true"
                android:checked="true"
                android:visibility="gone"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRecalibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/blue_back"
                app:cardCornerRadius="8dp"
                app:contentPadding="20dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/recalibrate"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>