<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/rate_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/rate_dialog_title"
                android:textColor="@color/titleColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/ratingbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="16dp"
            app:srb_clearRatingEnabled="false"
            app:srb_clickable="true"
            app:srb_drawableEmpty="@drawable/ic_star_empty"
            app:srb_drawableFilled="@drawable/ic_star_filled"
            app:srb_isIndicator="false"
            app:srb_minimumStars="1"
            app:srb_numStars="5"
            app:srb_scrollable="true"
            app:srb_stepSize="1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:minLines="5"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:letterSpacing="0"
            android:padding="16dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>
</layout>